# stm32-udp-air-quality-sensors-gateway

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  HARDWARE.md  README.md  SOFTWARE.md  build.sh  run_clang_tidy.sh  run_tests.sh
.github/workflows/: static-analysis.yml  unit-tests.yml
cmake/: arm-none-eabi-gcc.cmake
doc/: TODO.md
include/app/: config.h  display.h  displayed_sensor_management.h  error_manager.h  frame_parser.h  hal_interface.h  main.h  network.h  network_data.h  reset.h  uart_rx.h
include/drivers/esp8266/: esp8266.h
include/toolbox/: assert.h
lib/stm32-ssd1306/: ssd1306_conf.h
mxcube/: .mxproject  CMakeLists.txt  air_quality_server.ioc
mxcube/Core/Inc/: main.h
mxcube/Core/Src/: main.c  stm32f4xx_hal_msp.c
mxcube/cmake/stm32cubemx/: CMakeLists.txt
src/app/: display.c  displayed_sensor_management.c  error_manager.c  frame_parser.c  main.c  network.c  reset.c
src/drivers/esp8266/: esp8266.c
src/hal/: hal_interface.c  uart_rx.c
tests/: CMakeLists.txt  CMakePresets.json  test_display.c  test_frame_parser.c  test_sensor_management.c
tests/stubs/: FreeRTOS.h  cmsis_os.h  freertos_stubs.c  freertos_test_helpers.h  globals_stubs.c  portmacro.h  ssd1306.h  ssd1306_fonts.h  ssd1306_stubs.c  task.h
